fully intergrated mostly

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                                 <a href="#" class="myPostsBtn">
                                     <i class="fas fa-images"></i> My Posts
                                 </a>
-                                <a href="#">
+                                <!-- <a href="#">
                                     <i class="fas fa-chart-line"></i> Statistics
-                                </a>
+                                </a> -->
                                 <div class="divider"></div>
                                 <a href="#" class="logoutBtn">
                                     <i class="fas fa-sign-out-alt"></i> Logout
