Revert "close to done"
This reverts commit 960fd4d9e1ba0a80ef2dd6a327fe31b2a2b0359f.

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <img id="imagePreview" class="image-preview" alt="Image preview">
                 </div>
 
-                <!-- <div class="field">
+                <div class="field">
                     <label class="label">Category</label>
                     <div class="control">
                         <div class="select is-fullwidth">
@@ -245,7 +245,7 @@
                             </select>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <button class="auth-btn" id="submitMemeBtn">
                     <i class="fas fa-upload mr-2"></i> Upload Meme
