--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar custom-navbar" role="navigation" aria-label="main navigation">
+    <nav class="navbar custom-navbar is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="#" id="homeBtn">
                 <img src="public/assets/zmlogoBlack.png" alt="ZedMemes Logo">
